solved files for wednesday

--- a/03-Ins_LocAndIloc/Solved/LocAndIloc.ipynb
+++ b/03-Ins_LocAndIloc/Solved/LocAndIloc.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -684,47 +684,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Richardson</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Peter</td>\n",
-       "      <td>7-(789)867-9023</td>\n",
-       "      <td>Europe/Moscow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Clark</th>\n",
        "      <td>20</td>\n",
        "      <td>Billy</td>\n",
        "      <td>62-(213)345-2549</td>\n",
        "      <td>Asia/Makassar</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Andrews</th>\n",
-       "      <td>23</td>\n",
-       "      <td>Billy</td>\n",
-       "      <td>86-(859)746-5367</td>\n",
-       "      <td>Asia/Chongqing</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Price</th>\n",
-       "      <td>59</td>\n",
-       "      <td>Billy</td>\n",
-       "      <td>86-(878)547-7739</td>\n",
-       "      <td>Asia/Shanghai</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            id first_name      Phone Number       Time zone\n",
-       "last_name                                                  \n",
-       "Richardson   1      Peter   7-(789)867-9023   Europe/Moscow\n",
-       "Clark       20      Billy  62-(213)345-2549   Asia/Makassar\n",
-       "Andrews     23      Billy  86-(859)746-5367  Asia/Chongqing\n",
-       "Price       59      Billy  86-(878)547-7739   Asia/Shanghai"
+       "           id first_name      Phone Number      Time zone\n",
+       "last_name                                                \n",
+       "Clark      20      Billy  62-(213)345-2549  Asia/Makassar"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +708,7 @@
    "source": [
     "# Multiple conditions can be set to narrow down or widen the filter\n",
     "only_billy_and_peter = df.loc[(df[\"first_name\"] == \"Billy\") | (\n",
-    "    df[\"first_name\"] == \"Peter\"), :]\n",
+    "    df[\"Time zone\"] == \"Asia/Makassar\"), :]\n",
     "\n",
     "only_billy_and_peter"
    ]
@@ -761,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
