--- a/05-Ins_GroupBy/Solved/GroupBy.ipynb
+++ b/05-Ins_GroupBy/Solved/GroupBy.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -413,159 +413,13 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "converted_ufo.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
-       "      <th>country</th>\n",
-       "      <th>shape</th>\n",
-       "      <th>duration (seconds)</th>\n",
-       "      <th>duration (hours/min)</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>date posted</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10/10/1949 20:30</td>\n",
-       "      <td>san marcos</td>\n",
-       "      <td>tx</td>\n",
-       "      <td>us</td>\n",
-       "      <td>cylinder</td>\n",
-       "      <td>2700.0</td>\n",
-       "      <td>45 minutes</td>\n",
-       "      <td>This event took place in early fall around 194...</td>\n",
-       "      <td>4/27/2004</td>\n",
-       "      <td>29.8830556</td>\n",
-       "      <td>-97.941111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10/10/1956 21:00</td>\n",
-       "      <td>edna</td>\n",
-       "      <td>tx</td>\n",
-       "      <td>us</td>\n",
-       "      <td>circle</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>1/2 hour</td>\n",
-       "      <td>My older brother and twin sister were leaving ...</td>\n",
-       "      <td>1/17/2004</td>\n",
-       "      <td>28.9783333</td>\n",
-       "      <td>-96.645833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10/10/1960 20:00</td>\n",
-       "      <td>kaneohe</td>\n",
-       "      <td>hi</td>\n",
-       "      <td>us</td>\n",
-       "      <td>light</td>\n",
-       "      <td>900.0</td>\n",
-       "      <td>15 minutes</td>\n",
-       "      <td>AS a Marine 1st Lt. flying an FJ4B fighter/att...</td>\n",
-       "      <td>1/22/2004</td>\n",
-       "      <td>21.4180556</td>\n",
-       "      <td>-157.803611</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>10/10/1961 19:00</td>\n",
-       "      <td>bristol</td>\n",
-       "      <td>tn</td>\n",
-       "      <td>us</td>\n",
-       "      <td>sphere</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>5 minutes</td>\n",
-       "      <td>My father is now 89 my brother 52 the girl wit...</td>\n",
-       "      <td>4/27/2007</td>\n",
-       "      <td>36.595</td>\n",
-       "      <td>-82.188889</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>10/10/1965 23:45</td>\n",
-       "      <td>norwalk</td>\n",
-       "      <td>ct</td>\n",
-       "      <td>us</td>\n",
-       "      <td>disk</td>\n",
-       "      <td>1200.0</td>\n",
-       "      <td>20 minutes</td>\n",
-       "      <td>A bright orange color changing to reddish colo...</td>\n",
-       "      <td>10/2/1999</td>\n",
-       "      <td>41.1175</td>\n",
-       "      <td>-73.408333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           datetime        city state country     shape  duration (seconds)  \\\n",
-       "0  10/10/1949 20:30  san marcos    tx      us  cylinder              2700.0   \n",
-       "3  10/10/1956 21:00        edna    tx      us    circle                20.0   \n",
-       "4  10/10/1960 20:00     kaneohe    hi      us     light               900.0   \n",
-       "5  10/10/1961 19:00     bristol    tn      us    sphere               300.0   \n",
-       "7  10/10/1965 23:45     norwalk    ct      us      disk              1200.0   \n",
-       "\n",
-       "  duration (hours/min)                                           comments  \\\n",
-       "0           45 minutes  This event took place in early fall around 194...   \n",
-       "3             1/2 hour  My older brother and twin sister were leaving ...   \n",
-       "4           15 minutes  AS a Marine 1st Lt. flying an FJ4B fighter/att...   \n",
-       "5            5 minutes  My father is now 89 my brother 52 the girl wit...   \n",
-       "7           20 minutes  A bright orange color changing to reddish colo...   \n",
-       "\n",
-       "  date posted    latitude  longitude   \n",
-       "0   4/27/2004  29.8830556  -97.941111  \n",
-       "3   1/17/2004  28.9783333  -96.645833  \n",
-       "4   1/22/2004  21.4180556 -157.803611  \n",
-       "5   4/27/2007      36.595  -82.188889  \n",
-       "7   10/2/1999     41.1175  -73.408333  "
-      ]
-     },
      "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "converted_ufo.head()"
+    "converted_ufo.dtypes"
    ]
   },
   {
@@ -711,6 +565,152 @@
     }
    ],
    "source": [
+    "converted_ufo.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "      <th>country</th>\n",
+       "      <th>shape</th>\n",
+       "      <th>duration (seconds)</th>\n",
+       "      <th>duration (hours/min)</th>\n",
+       "      <th>comments</th>\n",
+       "      <th>date posted</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10/10/1949 20:30</td>\n",
+       "      <td>san marcos</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>us</td>\n",
+       "      <td>cylinder</td>\n",
+       "      <td>2700.0</td>\n",
+       "      <td>45 minutes</td>\n",
+       "      <td>This event took place in early fall around 194...</td>\n",
+       "      <td>4/27/2004</td>\n",
+       "      <td>29.8830556</td>\n",
+       "      <td>-97.941111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10/10/1956 21:00</td>\n",
+       "      <td>edna</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>us</td>\n",
+       "      <td>circle</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1/2 hour</td>\n",
+       "      <td>My older brother and twin sister were leaving ...</td>\n",
+       "      <td>1/17/2004</td>\n",
+       "      <td>28.9783333</td>\n",
+       "      <td>-96.645833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10/10/1960 20:00</td>\n",
+       "      <td>kaneohe</td>\n",
+       "      <td>hi</td>\n",
+       "      <td>us</td>\n",
+       "      <td>light</td>\n",
+       "      <td>900.0</td>\n",
+       "      <td>15 minutes</td>\n",
+       "      <td>AS a Marine 1st Lt. flying an FJ4B fighter/att...</td>\n",
+       "      <td>1/22/2004</td>\n",
+       "      <td>21.4180556</td>\n",
+       "      <td>-157.803611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>10/10/1961 19:00</td>\n",
+       "      <td>bristol</td>\n",
+       "      <td>tn</td>\n",
+       "      <td>us</td>\n",
+       "      <td>sphere</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>5 minutes</td>\n",
+       "      <td>My father is now 89 my brother 52 the girl wit...</td>\n",
+       "      <td>4/27/2007</td>\n",
+       "      <td>36.595</td>\n",
+       "      <td>-82.188889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>10/10/1965 23:45</td>\n",
+       "      <td>norwalk</td>\n",
+       "      <td>ct</td>\n",
+       "      <td>us</td>\n",
+       "      <td>disk</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>20 minutes</td>\n",
+       "      <td>A bright orange color changing to reddish colo...</td>\n",
+       "      <td>10/2/1999</td>\n",
+       "      <td>41.1175</td>\n",
+       "      <td>-73.408333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           datetime        city state country     shape  duration (seconds)  \\\n",
+       "0  10/10/1949 20:30  san marcos    tx      us  cylinder              2700.0   \n",
+       "3  10/10/1956 21:00        edna    tx      us    circle                20.0   \n",
+       "4  10/10/1960 20:00     kaneohe    hi      us     light               900.0   \n",
+       "5  10/10/1961 19:00     bristol    tn      us    sphere               300.0   \n",
+       "7  10/10/1965 23:45     norwalk    ct      us      disk              1200.0   \n",
+       "\n",
+       "  duration (hours/min)                                           comments  \\\n",
+       "0           45 minutes  This event took place in early fall around 194...   \n",
+       "3             1/2 hour  My older brother and twin sister were leaving ...   \n",
+       "4           15 minutes  AS a Marine 1st Lt. flying an FJ4B fighter/att...   \n",
+       "5            5 minutes  My father is now 89 my brother 52 the girl wit...   \n",
+       "7           20 minutes  A bright orange color changing to reddish colo...   \n",
+       "\n",
+       "  date posted    latitude  longitude   \n",
+       "0   4/27/2004  29.8830556  -97.941111  \n",
+       "3   1/17/2004  28.9783333  -96.645833  \n",
+       "4   1/22/2004  21.4180556 -157.803611  \n",
+       "5   4/27/2007      36.595  -82.188889  \n",
+       "7   10/2/1999     41.1175  -73.408333  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Filter the data so that only those sightings in the US are in a DataFrame\n",
     "usa_ufo_df = converted_ufo.loc[converted_ufo[\"country\"] == \"us\", :]\n",
     "usa_ufo_df.head()"
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -729,10 +729,57 @@
        "wa    3707\n",
        "tx    3398\n",
        "ny    2915\n",
+       "il    2447\n",
+       "az    2362\n",
+       "pa    2319\n",
+       "oh    2251\n",
+       "mi    1781\n",
+       "nc    1722\n",
+       "or    1667\n",
+       "mo    1431\n",
+       "co    1385\n",
+       "in    1268\n",
+       "va    1248\n",
+       "ma    1238\n",
+       "nj    1236\n",
+       "ga    1235\n",
+       "wi    1205\n",
+       "tn    1091\n",
+       "mn     996\n",
+       "sc     986\n",
+       "ct     865\n",
+       "ky     843\n",
+       "md     818\n",
+       "nv     778\n",
+       "ok     714\n",
+       "nm     693\n",
+       "ia     669\n",
+       "al     629\n",
+       "ut     611\n",
+       "ks     599\n",
+       "ar     578\n",
+       "la     547\n",
+       "me     544\n",
+       "id     508\n",
+       "nh     482\n",
+       "mt     460\n",
+       "wv     438\n",
+       "ne     373\n",
+       "ms     368\n",
+       "ak     311\n",
+       "hi     257\n",
+       "vt     254\n",
+       "ri     224\n",
+       "sd     177\n",
+       "wy     169\n",
+       "de     165\n",
+       "nd     123\n",
+       "pr      24\n",
+       "dc       7\n",
        "Name: state, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,12 +787,12 @@
    "source": [
     "# Count how many sightings have occured within each state\n",
     "state_counts = usa_ufo_df[\"state\"].value_counts()\n",
-    "state_counts.head()"
+    "state_counts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -754,7 +801,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7fc23db0b290>\n"
+      "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000020DED49B408>\n"
      ]
     },
     {
@@ -966,7 +1013,7 @@
        "fl                     3754      3754         3754      3754        3754  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1093,7 @@
        "Name: duration (seconds), dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -1074,7 +1121,7 @@
        "Name: duration (seconds), dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1201,7 @@
        "ca                 8683       24865571.47"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1537,7 +1584,7 @@
        "        sk             77  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1694,7 @@
        "        mb              160132.00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
