--- a/08-Stu_TedTalks-Binning/Unsolved/BinningTed_unsolved.ipynb
+++ b/08-Stu_TedTalks-Binning/Unsolved/BinningTed_unsolved.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -170,51 +170,63 @@
     }
    ],
    "source": [
-    "# Figure out the minimum and maximum views for a TED Talk\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create bins in which to place values based upon TED Talk views\n",
-    "bins = \n",
-    "\n",
-    "# Create labels for these bins\n",
-    "group_labels = "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    5mil to 50mil\n",
-       "1     3mil to 4mil\n",
-       "2     1mil to 2mil\n",
-       "3     1mil to 2mil\n",
-       "4    5mil to 50mil\n",
-       "Name: views, dtype: category\n",
-       "Categories (10, object): [0 to 199k < 200k to 399k < 400k to 599k < 600k to 799k ... 2mil to 3mil < 3mil to 4mil < 4mil to 5mil < 5mil to 50mil]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Slice the data and place it into bins\n"
+    "# Figure out the minimum and maximum views for a TED Talk\n",
+    "print(ted_df[\"views\"].max())\n",
+    "print(ted_df[\"views\"].min())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create bins in which to place values based upon TED Talk views\n",
+    "bins = [0, 199999, 399999, 599999, 799999, 999999,\n",
+    "        1999999, 2999999, 3999999, 4999999, 50000000]\n",
+    "\n",
+    "# Create labels for these bins\n",
+    "group_labels = [\"0 to 199k\", \"200k to 399k\", \"400k to 599k\", \"600k to 799k\", \"800k to 999k\", \"1mil to 2mil\",\n",
+    "                \"2mil to 3mil\", \"3mil to 4mil\", \"4mil to 5mil\", \"5mil to 50mil\"]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       5mil to 50mil\n",
+       "1        3mil to 4mil\n",
+       "2        1mil to 2mil\n",
+       "3        1mil to 2mil\n",
+       "4       5mil to 50mil\n",
+       "            ...      \n",
+       "2545     400k to 599k\n",
+       "2546     400k to 599k\n",
+       "2547     200k to 399k\n",
+       "2548     400k to 599k\n",
+       "2549     200k to 399k\n",
+       "Name: views, Length: 2550, dtype: category\n",
+       "Categories (10, object): ['0 to 199k' < '200k to 399k' < '400k to 599k' < '600k to 799k' ... '2mil to 3mil' < '3mil to 4mil' < '4mil to 5mil' < '5mil to 50mil']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Slice the data and place it into bins\n",
+    "pd.cut(ted_df[\"views\"], bins, labels=group_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -350,161 +362,51 @@
        "4  The best stats you've ever seen  12005869  5mil to 50mil  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Place the data series into a new column inside of the DataFrame\n"
+    "# Place the data series into a new column inside of the DataFrame\n",
+    "ted_df['View Group'] = pd.cut(ted_df[\"views\"], bins, labels=group_labels)\n",
+    "\n",
+    "ted_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "View Group\n",
-      "0 to 199k          32\n",
-      "200k to 399k      135\n",
-      "400k to 599k      234\n",
-      "600k to 799k      307\n",
-      "800k to 999k      339\n",
-      "1mil to 2mil     1004\n",
-      "2mil to 3mil      239\n",
-      "3mil to 4mil       93\n",
-      "4mil to 5mil       68\n",
-      "5mil to 50mil      99\n",
-      "Name: comments, dtype: int64\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>comments</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>languages</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>View Group</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0 to 199k</th>\n",
-       "      <td>76.937500</td>\n",
-       "      <td>898.187500</td>\n",
-       "      <td>4.062500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200k to 399k</th>\n",
-       "      <td>81.992593</td>\n",
-       "      <td>832.192593</td>\n",
-       "      <td>18.785185</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>400k to 599k</th>\n",
-       "      <td>107.162393</td>\n",
-       "      <td>870.517094</td>\n",
-       "      <td>22.940171</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>600k to 799k</th>\n",
-       "      <td>118.912052</td>\n",
-       "      <td>829.039088</td>\n",
-       "      <td>24.400651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>800k to 999k</th>\n",
-       "      <td>119.628319</td>\n",
-       "      <td>798.772861</td>\n",
-       "      <td>25.678466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1mil to 2mil</th>\n",
-       "      <td>168.136454</td>\n",
-       "      <td>809.899402</td>\n",
-       "      <td>27.899402</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2mil to 3mil</th>\n",
-       "      <td>299.481172</td>\n",
-       "      <td>832.430962</td>\n",
-       "      <td>32.807531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3mil to 4mil</th>\n",
-       "      <td>360.870968</td>\n",
-       "      <td>809.505376</td>\n",
-       "      <td>34.258065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4mil to 5mil</th>\n",
-       "      <td>507.088235</td>\n",
-       "      <td>920.514706</td>\n",
-       "      <td>35.720588</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5mil to 50mil</th>\n",
-       "      <td>650.393939</td>\n",
-       "      <td>884.282828</td>\n",
-       "      <td>40.252525</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 comments    duration  languages\n",
-       "View Group                                      \n",
-       "0 to 199k       76.937500  898.187500   4.062500\n",
-       "200k to 399k    81.992593  832.192593  18.785185\n",
-       "400k to 599k   107.162393  870.517094  22.940171\n",
-       "600k to 799k   118.912052  829.039088  24.400651\n",
-       "800k to 999k   119.628319  798.772861  25.678466\n",
-       "1mil to 2mil   168.136454  809.899402  27.899402\n",
-       "2mil to 3mil   299.481172  832.430962  32.807531\n",
-       "3mil to 4mil   360.870968  809.505376  34.258065\n",
-       "4mil to 5mil   507.088235  920.514706  35.720588\n",
-       "5mil to 50mil  650.393939  884.282828  40.252525"
+       "View Group\n",
+       "0 to 199k          32\n",
+       "200k to 399k      135\n",
+       "400k to 599k      234\n",
+       "600k to 799k      307\n",
+       "800k to 999k      339\n",
+       "1mil to 2mil     1004\n",
+       "2mil to 3mil      239\n",
+       "3mil to 4mil       93\n",
+       "4mil to 5mil       68\n",
+       "5mil to 50mil      99\n",
+       "Name: comments, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a GroupBy object based upon \"View Group\"\n",
-    "\n",
+    "ted_group = ted_df.groupby(\"View Group\")\n",
     "\n",
     "# Find how many rows fall into each bin\n",
-    "\n",
+    "ted_group[\"comments\"].count()\n",
     "\n",
     "# Get the average of each column within the GroupBy object\n"
    ]
@@ -533,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
