--- a/01-Ins_CleaningData/Solved/CleaningData.ipynb
+++ b/01-Ins_CleaningData/Solved/CleaningData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -145,7 +145,7 @@
        "4    Adams    Marion              None    Exeter    NH  03833   100.0     NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -258,7 +258,7 @@
        "4    Adams    Marion              None    Exeter    NH  03833   100.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,10 +271,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "inputHidden": false,
-    "outputHidden": false
+    "outputHidden": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -290,7 +291,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -334,7 +335,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -365,7 +366,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,36 +378,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "inputHidden": false,
-    "outputHidden": false
-   },
-   "outputs": [],
-   "source": [
-    "# Use pd.to_numeric() method to convert the datatype of the Amount column\n",
-    "df['Amount'] = pd.to_numeric(df['Amount'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dtype('float64')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Unable to parse string \"66402-9001\" at position 22",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\_libs\\lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.maybe_convert_numeric\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unable to parse string \"66402-9001\"",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2304/944212282.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Use pd.to_numeric() method to convert the datatype of the Amount column\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Zip'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Zip'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\tools\\numeric.py\u001b[0m in \u001b[0;36mto_numeric\u001b[1;34m(arg, errors, downcast)\u001b[0m\n\u001b[0;32m    182\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    183\u001b[0m             values, _ = lib.maybe_convert_numeric(\n\u001b[1;32m--> 184\u001b[1;33m                 \u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcoerce_numeric\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcoerce_numeric\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    185\u001b[0m             )\n\u001b[0;32m    186\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mValueError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\_libs\\lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.maybe_convert_numeric\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Unable to parse string \"66402-9001\" at position 22"
+     ]
     }
    ],
+   "source": [
+    "# Use pd.to_numeric() method to convert the datatype of the Amount column\n",
+    "df['Zip'] = pd.to_numeric(df['Zip'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "inputHidden": false,
+    "outputHidden": false
+   },
+   "outputs": [],
    "source": [
     "# Verify that the Amount column datatype has been made numeric\n",
     "df['Amount'].dtype"
@@ -414,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -423,21 +431,21 @@
     {
      "data": {
       "text/plain": [
-       "None                              249\n",
-       "Self                              241\n",
-       "Retired                           126\n",
-       "Self Employed                      39\n",
-       "Self-Employed                      34\n",
-       "                                 ... \n",
-       "Excelacom                           1\n",
-       "Paramount Cabinetry, Inc            1\n",
-       "Marriott International, Inc.        1\n",
-       "NCR Corporation                     1\n",
-       "Srebalus Construction Co. Inc.      1\n",
+       "None                             249\n",
+       "Self                             241\n",
+       "Retired                          126\n",
+       "Self Employed                     39\n",
+       "Self-Employed                     34\n",
+       "                                ... \n",
+       "Fox                                1\n",
+       "Puma Springs Vineyards             1\n",
+       "South Brooklyn Legal Services      1\n",
+       "Greene & Seaver, PC                1\n",
+       "JDS Uniphase                       1\n",
        "Name: Employer, Length: 1011, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -463,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -472,21 +480,21 @@
     {
      "data": {
       "text/plain": [
-       "Self-Employed                            314\n",
-       "None                                     249\n",
-       "Retired                                  126\n",
-       "Google                                     6\n",
-       "Not Employed                               4\n",
-       "                                        ... \n",
-       "Philip A Greider, MD, Inc                  1\n",
-       "Gateway Homeless Services                  1\n",
-       "Acusis, LLC                                1\n",
-       "Economic Empowerment Initiative, Inc.      1\n",
-       "Twin Oaks Software Dev Inc                 1\n",
+       "Self-Employed                    314\n",
+       "None                             249\n",
+       "Retired                          126\n",
+       "Google                             6\n",
+       "Not Employed                       4\n",
+       "                                ... \n",
+       "Fox                                1\n",
+       "Puma Springs Vineyards             1\n",
+       "South Brooklyn Legal Services      1\n",
+       "Greene & Seaver, PC                1\n",
+       "JDS Uniphase                       1\n",
        "Name: Employer, Length: 1009, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -507,33 +515,33 @@
     {
      "data": {
       "text/plain": [
-       "Self-Employed                   314\n",
-       "None                            249\n",
-       "Retired                         126\n",
-       "Unemployed                        8\n",
-       "Google                            6\n",
-       "                               ... \n",
-       "Paramount Cabinetry, Inc          1\n",
-       "Marriott International, Inc.      1\n",
-       "NCR Corporation                   1\n",
-       "Ambassador Care                   1\n",
-       "Accountant                        1\n",
-       "Name: Employer, Length: 1008, dtype: int64"
+       "Self-Employed                    314\n",
+       "Unemployed                       257\n",
+       "Retired                          126\n",
+       "Google                             6\n",
+       "University of California           3\n",
+       "                                ... \n",
+       "Fox                                1\n",
+       "Puma Springs Vineyards             1\n",
+       "South Brooklyn Legal Services      1\n",
+       "Greene & Seaver, PC                1\n",
+       "JDS Uniphase                       1\n",
+       "Name: Employer, Length: 1007, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Employer'] = df['Employer'].replace({'Not Employed': 'Unemployed'})\n",
+    "df['Employer'] = df['Employer'].replace({'Not Employed': 'Unemployed', 'None': 'Unemployed'})\n",
     "df['Employer'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -612,7 +620,7 @@
        "max    5000.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   },
   "nteract": {
    "version": "0.2.0"
